--- a/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedCell" rowHeight="498" id="87Z-am-yww">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="498" id="87Z-am-yww" customClass="FeedImageCell" customModule="Prototype" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44" width="414" height="498"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="87Z-am-yww" id="b6k-oh-HOz">
@@ -120,6 +120,12 @@
                                         <constraint firstItem="25N-Xs-mqF" firstAttribute="top" secondItem="b6k-oh-HOz" secondAttribute="top" constant="8" id="hfh-QX-act"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="QVz-W1-U1L" id="J4X-Kp-xxv"/>
+                                    <outlet property="feedImageView" destination="60H-dG-ypv" id="Nrn-0I-X0Q"/>
+                                    <outlet property="locationContainer" destination="Otd-5t-IIs" id="gWq-DQ-nXL"/>
+                                    <outlet property="locationLabel" destination="Otd-5t-IIs" id="lzh-g6-0D2"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
