--- a/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -136,6 +136,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="My Feed" largeTitleDisplayMode="always" id="8CN-ZL-VLz"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="RBM-id-lzF">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <action selector="refresh" destination="etM-KM-JDv" eventType="valueChanged" id="Zfb-1o-mUE"/>
