--- a/EssentialFeed/EssentialFeediOS/Feed UI/Views/Feed.storyboard
+++ b/EssentialFeed/EssentialFeediOS/Feed UI/Views/Feed.storyboard
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bhE-1r-cyy">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,59 +13,27 @@
             <objects>
                 <tableViewController id="bhE-1r-cyy" customClass="ListViewController" customModule="EssentialFeediOS" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="yjk-Pg-qeA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="sGl-Qy-nmA" customClass="ErrorView" customModule="EssentialFeediOS" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cqg-V5-Gf2">
-                                    <rect key="frame" x="8" y="8" width="584" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L9R-jl-5qM">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
-                                    <connections>
-                                        <action selector="hideMessageAnimated" destination="sGl-Qy-nmA" eventType="touchUpInside" id="jI1-Je-egw"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" red="1" green="0.41568627450000001" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="trailing" secondItem="L9R-jl-5qM" secondAttribute="trailing" id="DrP-Ap-uFa"/>
-                                <constraint firstAttribute="bottom" secondItem="Cqg-V5-Gf2" secondAttribute="bottom" constant="8" id="EtF-dy-P8b"/>
-                                <constraint firstAttribute="bottom" secondItem="L9R-jl-5qM" secondAttribute="bottom" id="GPM-PW-u7K"/>
-                                <constraint firstItem="Cqg-V5-Gf2" firstAttribute="top" secondItem="sGl-Qy-nmA" secondAttribute="top" constant="8" id="S85-3e-zel"/>
-                                <constraint firstItem="Cqg-V5-Gf2" firstAttribute="leading" secondItem="sGl-Qy-nmA" secondAttribute="leading" constant="8" id="WX3-eq-DmH"/>
-                                <constraint firstItem="L9R-jl-5qM" firstAttribute="top" secondItem="sGl-Qy-nmA" secondAttribute="top" id="b9a-6r-9HR"/>
-                                <constraint firstAttribute="trailing" secondItem="Cqg-V5-Gf2" secondAttribute="trailing" constant="8" id="ebt-iV-t8I"/>
-                                <constraint firstItem="L9R-jl-5qM" firstAttribute="leading" secondItem="sGl-Qy-nmA" secondAttribute="leading" id="pb3-C8-n3o"/>
-                            </constraints>
-                            <connections>
-                                <outlet property="label" destination="Cqg-V5-Gf2" id="lY7-q6-xez"/>
-                            </connections>
-                        </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="GGe-k7-nB1">
-                            <rect key="frame" x="0.0" y="615" width="600" height="16"/>
+                            <rect key="frame" x="0.0" y="565" width="414" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="498" id="Ief-Sh-Iat" customClass="FeedImageCell" customModule="EssentialFeediOS" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="94.5" width="600" height="498"/>
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="498"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ief-Sh-Iat" id="ZWB-lB-4rk">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="498"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="498"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dbk-eO-SVx">
-                                            <rect key="frame" x="16" y="8" width="568" height="482"/>
+                                            <rect key="frame" x="16" y="8" width="382" height="482"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cfo-LM-mMF">
-                                                    <rect key="frame" x="8" y="0.0" width="552" height="50"/>
+                                                    <rect key="frame" x="8" y="0.0" width="366" height="50"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.and.ellipse" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xxE-rg-waA">
                                                             <rect key="frame" x="0.0" y="7.5" width="16" height="24.5"/>
@@ -74,10 +44,10 @@
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="IEI-Dz-xxL">
-                                                            <rect key="frame" x="24" y="8" width="528" height="13.5"/>
+                                                            <rect key="frame" x="24" y="8" width="342" height="26.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Location Location Location Location Location Location Location Location Location Location " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5aR-6i-9R8">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="528" height="13.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="342" height="26.5"/>
                                                                     <color key="tintColor" systemColor="secondaryLabelColor"/>
                                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                                     <color key="textColor" systemColor="secondaryLabelColor"/>
@@ -97,7 +67,7 @@
                                                     </constraints>
                                                 </view>
                                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sPK-69-hvV" userLabel="Image Container">
-                                                    <rect key="frame" x="93" y="58" width="382" height="382"/>
+                                                    <rect key="frame" x="0.0" y="58" width="382" height="382"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="amk-1Q-Tgn">
                                                             <rect key="frame" x="0.0" y="0.0" width="382" height="382"/>
@@ -136,7 +106,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MY1-D2-Rw2">
-                                                    <rect key="frame" x="0.0" y="448" width="568" height="34"/>
+                                                    <rect key="frame" x="0.0" y="448" width="382" height="34"/>
                                                     <color key="tintColor" systemColor="secondaryLabelColor"/>
                                                     <string key="text">Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location Location </string>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
@@ -187,9 +157,6 @@
                             <action selector="refresh" destination="bhE-1r-cyy" eventType="valueChanged" id="tkk-jD-rs4"/>
                         </connections>
                     </refreshControl>
-                    <connections>
-                        <outlet property="errorView" destination="sGl-Qy-nmA" id="nQm-Vy-hu7"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dJ9-Wu-7Ml" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
